# acttey

./: .gitignore  Cargo.toml  README.md  run.sh
.cargo/: config.toml
crates/acttey/: Cargo.toml  README.md
crates/acttey/src/: lib.rs
crates/acttey/src/default/: components.rs  entities.rs  event.rs  mod.rs  resources.rs  systems.rs
crates/acttey/src/draw/: mod.rs  scene.rs
crates/acttey/src/ds/: dep_graph.rs  graph.rs  share.rs  sparse_set.rs
crates/acttey/src/ds/vec/: chunk_vec.rs  mod.rs  var_chunk_vec.rs
crates/acttey/src/event/: mod.rs
crates/acttey/src/macros/: Cargo.toml
crates/acttey/src/macros/src/: lib.rs
crates/acttey/src/primitive/: camera.rs  constant.rs  matrix.rs  mesh.rs  mod.rs  shape.rs  transform.rs
crates/acttey/src/primitive/shapes/: box.rs
crates/acttey/src/render/: bind.rs  buffer.rs  canvas.rs  desc.rs  fragment.rs  mod.rs  pass.rs  pipeline.rs  vertex.rs
crates/acttey/src/render/shaders/: helper.rs  mod.rs
crates/acttey/src/top/: app.rs  loop.rs  storage.rs
crates/acttey/src/util/: key.rs  macros.rs  mod.rs  slice.rs  string.rs  web.rs
crates/acttey/src/worker/: mod.rs  msg.rs
crates/acttey_app/: Cargo.toml
crates/acttey_app/src/: app.rs
crates/acttey_collections/: Cargo.toml
crates/acttey_collections/src/: any_vec.rs  lib.rs  sparse_set.rs
crates/acttey_ecs/: Cargo.toml
crates/acttey_ecs/macro/: Cargo.toml
crates/acttey_ecs/macro/src/: lib.rs
crates/acttey_ecs/macros/: Cargo.toml
crates/acttey_ecs/macros/src/: lib.rs
crates/acttey_ecs/src/: entity.rs  lib.rs
crates/acttey_ecs/trait/: Cargo.toml
crates/acttey_ecs/trait/src/: lib.rs
crates/acttey_ecs/traits/: Cargo.toml
crates/acttey_ecs/traits/src/: lib.rs
crates/acttey_math/: Cargo.toml
crates/acttey_math/src/: matrix.rs
crates/acttey_primitive/: Cargo.toml
crates/acttey_primitive/src/: constant.rs  lib.rs  shape.rs  vertex.rs
crates/acttey_render/: Cargo.toml
crates/acttey_render/src/: camera.rs  input.rs  lib.rs  render.rs
crates/acttey_struct/: Cargo.toml
crates/acttey_util/: Cargo.toml
crates/acttey_util/src/: macros.rs
crates/my-ecs/: Cargo.toml  run.sh
crates/my-ecs-macros/: Cargo.toml
crates/my-ecs-macros/src/: lib.rs
crates/my-ecs/examples/: async.rs  async_io.rs  parallel.rs
crates/my-ecs/examples/hello/: main.rs
crates/my-ecs/src/: lib.rs
crates/my-ecs/src/default/: ent_cont.rs  mod.rs  system.rs  worker.js  worker.rs
crates/my-ecs/src/ds/: arr.rs  atomic.rs  borrow.rs  fut.rs  generational.rs  get.rs  list.rs  map.rs  mod.rs  ptr.rs  queue.rs  raw.rs  signal.rs  types.rs
crates/my-ecs/src/ds/vec/: any_vec.rs  chunk_any_vec.rs  dedup_vec.rs  mod.rs  opt_vec.rs  vec_pool.rs
crates/my-ecs/src/ecs/: cache.rs  cmd.rs  component.rs  entity.rs  entry.rs  filter.rs  lock.rs  manager.rs  mod.rs  post.rs  query.rs  request.rs  resource.rs  share.rs  sparse_set.rs  system.rs  wait.rs  web.rs  worker.rs
crates/my-ecs/src/ecs/ent/: component.rs  entity.rs  mod.rs  sparse_set.rs  storage.rs
crates/my-ecs/src/ecs/sched/: comm.rs  ctrl.rs  par.rs  task.rs
crates/my-ecs/src/ecs/sys/: filter.rs  query.rs  request.rs  select.rs  storage.rs  system.rs
crates/my-ecs/src/macros/: Cargo.toml
crates/my-ecs/src/macros/src/: lib.rs
crates/my-ecs/src/util/: macros.rs  mod.rs  str.rs
crates/my-ecs/test-san/: thread.rs
crates/my-ecs/test-web/src/: lib.rs
crates/my-ecs/tests/: test.rs
crates/my-ecs/tests-other/san/: thread.rs
crates/my-ecs/tests-other/web/: Cargo.toml  package.json
crates/my-ecs/tests-other/web/src/: lib.rs
crates/my-wgsl/: .gitignore  Cargo.toml  README.md  run.sh
crates/my-wgsl-macros/: Cargo.toml
crates/my-wgsl-macros/src/: attr.rs  expr.rs  externs.rs  lib.rs  module.rs  path.rs  structs.rs  traits.rs  util.rs  var.rs
crates/my-wgsl/examples/: var.rs
crates/my-wgsl/examples/hello/: main.rs  test.wgsl
crates/my-wgsl/src/: attr.rs  builtin_functions.rs  builtin_types.rs  function.rs  lib.rs  module.rs  structs.rs  to_code.rs  util.rs  var.rs
crates/my-wgsl/src/macros/: Cargo.toml  README.md
crates/my-wgsl/src/macros/src/: lib.rs  module.rs  structs.rs  traits.rs  util.rs
crates/my-wgsl/src/my-wgsl-macros/: Cargo.toml
crates/my-wgsl/src/my-wgsl-macros/src/: lib.rs
crates/my-wgsl/tests/: test.rs
crates/naga-rs/: Cargo.toml  run.sh
crates/naga-rs-macros/: Cargo.toml
crates/naga-rs-macros/src/: lib.rs
crates/naga-rs/src/: lib.rs  traits.rs  util.rs
crates/naga-rs/src/back/: wgsl.rs
crates/naga-rs/src/front/: attr.rs  file.rs  item.rs  known.rs  mod.rs  sem.rs  task.rs  tree.rs  util.rs
crates/naga-rs/src/front/semantic/: known.rs  mod.rs  naga_proc.rs  path_proc.rs  path_tree.rs  queue.rs
crates/naga-rs/src/front/syntax/: common.rs  file.rs
crates/syn-locator/: Cargo.toml  README.md  run.sh
crates/syn-locator/src/: lib.rs
crates/syn-locator/tests/: test.rs
crates/wgsl-builtin/: Cargo.toml
examples/basic/: .gitignore  Cargo.toml  package-lock.json  package.json  vite.config.js  webpack.common.js
examples/basic/js/: index.js
examples/basic/src/: lib.rs
examples/basic/static/: index.html  index.js  style.css
examples/web/: Cargo.toml  README.md  index.html  index.js  package.json  vite.config.js
examples/web/src/: lib.rs  mandelbrot.rs  mandelbrot_cpu.rs  mandelbrot_gpu.rs  share.rs
src/: lib.rs  top.rs
src/app/: app.rs  event.rs  input.rs  loop.rs  mod.rs
src/default/: cmd.rs  components.rs  entities.rs  mod.rs  resources.rs  systems.rs
src/draw/: hierarchy.rs  inner.rs  mod.rs  scene.rs
src/ds/: any_vec.rs  borrow.rs  buf.rs  common.rs  dep_graph.rs  gen.rs  generational.rs  get.rs  graph.rs  map.rs  mod.rs  refs.rs  set_list.rs  sparse_set.rs  vec.rs
src/ecs/: borrow_js.rs  component.rs  entity.rs  filter.rs  mod.rs  query.rs  request.rs  resource.rs  schedule.rs  sparse_set.rs  storage.rs  system.rs  traits.rs  wait.rs
src/ecs/macros/: Cargo.toml
src/ecs/macros/src/: lib.rs
src/gpu/: bind.rs  buffer.rs  common.rs  context.rs  encoder.rs  mod.rs  pipeline.rs  shader.rs
src/math/: matrix.rs
src/msg/: manager.rs  (+1 more)
(+81 files in other folders)
