[package]
name = "acttey"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
my-ecs = { version = "0.0.1", path = "crates/my-ecs" }
my-wgsl = { version = "0.0.2", path = "crates/my-wgsl" }
js-sys = { version = "0.3.69" }
web-sys = { version = "0.3.69", features = [
    "console",
    "Node",
    "Window",
    "Navigator",
    "Gpu",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "DedicatedWorkerGlobalScope",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Event",
    "EventTarget",
    "MessageEvent",
    "MouseEvent",
    "KeyboardEvent",
    "CustomEvent",
] }
wasm-bindgen = { version = "0.2.92" }
# Cargo issue (https://github.com/rustwasm/wasm-bindgen/issues/3830)
wasm-bindgen-futures = { version = "=0.4.42" } 
wgpu = { version = "0.19.3" }
console_error_panic_hook = { version = "0.1.7" }
bytemuck = { version = "1.14.0", features = [
    "derive",
    "min_const_generics",
    "extern_crate_alloc"
] }
paste = { version = "1.0.14" }
ahash = { version = "0.8.11" }
# ahash depends on getrandom, and it warns you to put js feature for wasm build.
getrandom = { version = "0.2", features = [ "js" ] }
smallvec = { version = "1.11.2" }
bitflags = { version = "2.4.2" }
thiserror = { version = "1.0.57" }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[features]
# Enables wgpu's webgl feature.
webgl = ["wgpu/webgl"]

[workspace]
members = [
    "crates/*",
]
exclude = [
    "examples/basic"
]

# Just let rust-analyzer know, so that it will look for examples and show us something like inlay hints.
[[example]]
name = "basic"
path = "examples/basic/src/lib.rs"
crate-type = ["cdylib"]
