[package]
name = "acttey"
version = "0.1.0"
edition = "2021"
rust-version = "1.80" # std::sync::LazyLock is stable since 1.80.0.
description = "An Entity Component System (ECS) library based on CPU & GPU parallelism"
documentation = "https://docs.rs/acttey"
readme = "README.md" 
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
keywords = ["ecs", "parallel", "wasm", "web"]

[lib]
crate-type = ["cdylib", "rlib"]

# ================
# === Features ===
# ================

[features]
check = ["my-ecs/check"]
stat = ["my-ecs/stat"]
webgl = ["wgpu/webgl"]

# ====================
# === Dependencies ===
# ====================

[dependencies]
my-ecs = { version = "0.1.0", path = "crates/my-ecs" }
my-wgsl = { version = "0.1.0", path = "crates/my-wgsl" }
ahash = { version = "0.8.11" }
wgpu = { version = "23.0.1" }
thiserror = { version = "2.0.3" }

# =================
# === Workspace ===
# =================

[workspace]
members = ["crates/*", "crates/my-ecs/tests-other/web", "examples/web"]
