[package]
name = "acttey_collections"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0, MIT"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acttey_util = { version = "0.0.1", path = "../acttey_util" }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
