[package]
name = "acttey_ecs"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0, MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
macros = { version = "0.0.0", path = "macros" }
traits = { version = "0.0.0", path = "traits" }