[package]
name = "acttey_ecs"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acttey_ecs_macro = { version = "0.0.0", path = "macro" }
acttey_ecs_trait = { version = "0.0.0", path = "trait" }
