[package]
name = "acttey_math"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = [
    "derive",
    "min_const_generics"
]}
paste = "1.0.14"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
