[package]
name = "acttey_render"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wgpu = "0.17.1"
# wgpu = { version = "0.17.1", features = ["webgl"]}
winit = "0.29.1-beta"
bytemuck = { version = "1.13.1", features = [
    "derive",
    "min_const_generics"
]}
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent"
]}
acttey_math = { version = "0.0.0", path = "../acttey_math" }
acttey_primitive = { version = "0.0.0", path = "../acttey_primitive" }
acttey_util = { version = "0.0.0", path = "../acttey_util" }
acttey_ecs = { version = "0.0.0", path = "../acttey_ecs" }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
