[package]
name = "my-ecs-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A procedural macro for my-ecs crate"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = [
  "full",
  "derive",
  "extra-traits"
]}
proc-macro2 = "1.0.69"
