[package]
name = "my-wgsl-macros"
version = "0.1.3"
edition = "2021"
description = "A procedural macro for my-wgsl crate"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
wgsl-builtin = { version = "0.1.0", path = "../wgsl-builtin" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
paste = { version = "1.0.14" }
