[package]
name = "my-wgsl"
description = "Generating WGSL code from rust"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
paste = { version = "1.0.14" }
my-wgsl-macros = { version = "0.0.1", path = "src/macros" }

[dev-dependencies] 
pretty_assertions = { version = "1.4.0" }

[[example]]
name = "hello"
crate-type = ["bin"]
