[package]
name = "my-wgsl"
version = "0.1.2"
edition = "2021"
description = "A WGSL generation library from Rust"
documentation = "https://docs.rs/my-wgsl"
readme = "README.md" 
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
keywords = ["wgsl"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
my-wgsl-macros = { version = "0.1.2", path = "src/macros" }
paste = { version = "1.0.14" }

[dev-dependencies] 
const_format = { version = "0.2.34" }
pretty_assertions = { version = "1.4.0" }
