[package]
name = "naga-rs"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Rust to shading language"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
wgsl-builtin = { version = "0.1.0", path = "../wgsl-builtin" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
naga = { version = "24.0.0", features = ["wgsl-out"] }
smallvec = { version = "1.14.0" }
