[package]
name = "acttey_example_basic"
description = "Basic example of acttey"
repository = "https://github.com/ecoricemon/acttey"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
acttey = { path = "../../" }
