[package]
name = "web-example"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
acttey = { path = "../.." }
wasm-bindgen = { version = "0.2.97" }
wasm-bindgen-futures = { version = "0.4.49" }
js-sys = { version = "0.3.74" }
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.2", features = [ "js" ] }
