[package]
name = "acttey_ecs_macro"
description = "A simple graphics palette for more interactive web page"
repository = "https://github.com/ecoricemon/acttey"
license = "Apache-2.0 OR MIT"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = [
  "full",
  "extra-traits"
]}
acttey_ecs_trait = { version = "0.0.0", path = "../trait" }
